{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Launch",
            "id": "dffc9193-a1bb-4b7b-8d89-f48e5e531e9d",
            "actions": [
                {
                    "name": "Lock-In",
                    "type": "Button",
                    "id": "3d10c1ad-4805-46b7-a809-751ef4ac8298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c96f418f-75e6-4a8a-a191-55e032a8c2ea",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lock-In",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KidFlying",
            "id": "4754c791-75ef-4d3b-ad74-a556af906b91",
            "actions": [
                {
                    "name": "Use Item",
                    "type": "Button",
                    "id": "00c4ca28-0224-4bf3-8623-04ee168462f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fast-Forward",
                    "type": "Button",
                    "id": "a69f7b08-70bc-4d60-a89d-2980ab1461f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "361e8dc3-e672-47cb-add9-fc7c913979fa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "510bd2a4-b1fb-47a8-b2ec-6ecb41351f4d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fast-Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ResetStage",
            "id": "1ad9202d-ec63-4c42-8728-4e474dfa5eb9",
            "actions": [
                {
                    "name": "ResetButton",
                    "type": "Button",
                    "id": "05f8bfe7-2e85-4b5b-80ee-6e53f310d0a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f4addf31-78d0-41b7-91a3-c35693d8e8e3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}